[package]
name = "rspace"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
cli-clipboard = "0.4.0"
color-eyre = "0.6.3"
crossterm = "0.28.1"
dirs = "6.0.0"
fuzzy-matcher = "0.3.7"
ratatui = "0.29.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml = "0.9.34"
url = "2.5.4"
